# skelet3d

./: .coveralls.yml  .travis.yml  CMakeLists.txt  LICENSE  README.md  bld.bat  build.sh  build_windows.md  changelog.md  distr.sh  install.sh  install_linux.md  meta.yaml  requirements.txt  requirements_conda.txt  setup.cfg  setup.py
C/: BinaryThinning.c  BinaryThinningCxx.cxx  BinaryThinningCxx.h  BinaryThinningTest.c  CMakeLists.txt  compile.m
conda-recipe/: bld.bat  build.sh  meta.yaml
devel/: run_skeleton_analyser.ipynb
examples/: example01.py  example02.py  example03.py  example_corrosion_cast_analysis.ipynb
skelet3d/: __init__.py  gt_volume.py  gt_vtk.py  libfixer.py  skeleton_analyser.py  skeletonizer.py  tb_lar.py  tb_lar_kunes.py  tb_lar_smooth.py  tb_volume.py  tb_vtk.py  tree.py  vesseltree_export.py
src/: BinaryThinning.h  BinaryThinningCxx.cxx  BinaryThinningCxx.h  binaryThinningMex.c  compile.m  setup.py.in  skelet3d.m  skelet3d.py  test_skelet3d_python.py
src/skelet3d/: skelet3d.py  skeleton_analyser.py
tests/: export_test.py  skelet3d_test.py  skeleton_analyser_test.py  tube_tree_test.py  vt_biodur.yaml
